<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/dialog_background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tvReminderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        style="@style/Base.TextAppearance.AppCompat.Body1.Bold"
        android:paddingBottom="8dp" />

    <RadioGroup
        android:id="@+id/reminderOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/noReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoReminder"
            style="@style/Base.TextAppearance.AppCompat.Body2" />

        <RadioButton
            android:id="@+id/onEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:text="@string/ReminderAtEvent" />

        <RadioButton
            android:id="@+id/fifteenMinutesBefore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:text="@string/ReminderFifteenMinuteBefore" />

        <RadioButton
            android:id="@+id/oneHourBefore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:text="@string/ReminderOneHourBefore" />

    </RadioGroup>

</LinearLayout>
