<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:paddingTop="8dp"
    android:paddingBottom="4dp">


    <ImageView
        android:id="@+id/btn_prev_day"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/txtImg"
        android:src="@mipmap/angle_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_next_day"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/txtImg"
        android:src="@mipmap/angle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/month"
        style="@style/Base.TextAppearance.AppCompat.Body1.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/month"
        app:layout_constraintEnd_toStartOf="@+id/btn_next_day"
        app:layout_constraintStart_toEndOf="@+id/btn_prev_day"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_year"
        style="@style/Base.TextAppearance.AppCompat.Body2."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/year"
        app:layout_constraintEnd_toStartOf="@+id/btn_next_day"
        app:layout_constraintStart_toEndOf="@+id/btn_prev_day"
        app:layout_constraintTop_toBottomOf="@+id/month" />


</androidx.constraintlayout.widget.ConstraintLayout>