<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ActivityView.Time">
    <ImageView
        android:id="@+id/back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/txtImg"
        android:src="@mipmap/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        style="@style/Base.TextAppearance.AppCompat.Body1.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/timeOff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <ImageView
        android:id="@+id/ic_time"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/time"
        android:src="@mipmap/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/titleStatus"
        style="@style/Base.TextAppearance.AppCompat.Body1.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/SpecifiedTime"
        app:layout_constraintStart_toEndOf="@+id/ic_time"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/detail"
        style="@style/Base.TextAppearance.AppCompat.Body2."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/detailTime"
        android:textColor="@color/gray"
        app:layout_constraintStart_toEndOf="@+id/ic_time"
        app:layout_constraintTop_toBottomOf="@+id/titleStatus" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/matSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:thumbTint="@color/white"
        app:trackTint="@color/gray" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail">
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPointTime"
            style="@style/Base.TextAppearance.AppCompat.Body1.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/pointTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />


        <ImageView
            android:id="@+id/PickHour"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/txtImg"
            android:src="@mipmap/angle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/time_chooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="9:00 AM"
            style="@style/Base.TextAppearance.AppCompat.Body2."
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/PickHour"
            app:layout_constraintEnd_toStartOf="@+id/PickHour"
            app:layout_constraintTop_toBottomOf="@+id/view" />



    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>