<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.FragmentView.FragmentIndex"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextHeading"/>

    <TextView
        android:id="@+id/txtGuess"
        style="@style/Base.TextAppearance.AppCompat.Body2."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hiBody"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

    <EditText
        android:id="@+id/search_bar"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:background="@drawable/bg_search_bar"
        android:hint="@string/Search"
        android:gravity="center"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGuess" />

    <ImageView
        android:id="@+id/iconSearch"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:contentDescription="@string/txtImg"
        android:src="@mipmap/search"
        app:layout_constraintStart_toStartOf="@+id/search_bar"
        app:layout_constraintTop_toTopOf="@id/search_bar"
        app:layout_constraintBottom_toBottomOf="@id/search_bar"
        android:layout_marginStart="16dp"/>

    <ImageView
        android:id="@+id/iconCancel"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/txtImg"
        android:src="@mipmap/cancel"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/search_bar"
        app:layout_constraintEnd_toEndOf="@+id/search_bar"
        app:layout_constraintTop_toTopOf="@id/search_bar" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcv_filter" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LayoutNoTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgNoTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txtImg"
            android:layout_marginTop="32dp"
            android:src="@drawable/rafiki"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/clickToAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noTask"
            android:gravity="center"
            style="@style/Base.TextAppearance.AppCompat.Body2."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgNoTask"
            android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>