<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ActivityView.Calendar">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/txtImg"
        android:src="@mipmap/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        style="@style/Base.TextAppearance.AppCompat.Body1.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle">

        <ImageView
            android:id="@+id/btn_prev_month"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/txtImg"
            android:src="@mipmap/angle_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMonthYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/November"
            style="@style/Base.TextAppearance.AppCompat.Body2.Bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_next_month"
            app:layout_constraintStart_toEndOf="@+id/btn_prev_month"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_next_month"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/txtImg"
            android:src="@mipmap/angle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridView
        android:id="@+id/grid_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="7"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_month" />



</androidx.constraintlayout.widget.ConstraintLayout>